事务管理 - Spring数据库编程 - JDBC配置

--- a/Spring/pom.xml
+++ b/Spring/pom.xml
@@ -65,8 +65,21 @@
       <version>1.9.5</version>
     </dependency>
 
+<!-- jdbc连接 -->
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.0.2.RELEASE</version>
+    </dependency>
 
-
+<!--mysql驱动类-->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.38</version>
+    </dependency>
 
 
 
