--- a/MyBatis/pom.xml
+++ b/MyBatis/pom.xml
@@ -21,6 +21,7 @@
 
   </properties>
 
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -58,13 +59,6 @@
       <version>5.0.2.RELEASE</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>5.0.2.RELEASE</version>
-      <scope>compile</scope>
-    </dependency>
 
     <!-- 事务模块 支持用于实现特殊接口和所有POJO（普通Java对象）类的编程和声明式事务管理。   @Transactional-->
     <dependency>
@@ -91,18 +85,19 @@
       <scope>provided</scope>
     </dependency>
 
-<!-- MySql -->
+<!--mysql驱动类-->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.32</version>
+      <version>5.1.38</version>
     </dependency>
 
-<!-- Mybatis -->
+<!-- MyBatis -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
-      <version>3.4.5</version>
+      <version>3.5.1</version>
     </dependency>
 
 <!-- MyBatis-Spring 整合，获取sqlSessionFactory-->
@@ -124,12 +119,27 @@
       <artifactId>log4j-jcl</artifactId>
       <version>2.6.2</version>
     </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>RELEASE</version>
       <scope>compile</scope>
     </dependency>
+
+<!--  mybatis-generator的依赖 自动生成javabean和sql -->
+    <dependency>
+      <groupId>org.mybatis.generator</groupId>
+      <artifactId>mybatis-generator-maven-plugin</artifactId>
+      <version>1.3.4</version>
+    </dependency>
+
+
+
+
+
+
+
 
 
   </dependencies>
@@ -167,6 +177,28 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+
+
+        <!--mybatis-generator插件 用于自动生成javabean和sql
+            version版本要与mysql的version一样
+       -->
+        <plugin>
+          <groupId>org.mybatis.generator</groupId>
+          <artifactId>mybatis-generator-maven-plugin</artifactId>
+          <version>1.3.4</version>
+          <dependencies>
+            <dependency>
+              <groupId>mysql</groupId>
+              <artifactId>mysql-connector-java</artifactId>
+              <version>5.1.38</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <overwrite>true</overwrite>
+            <configurationFile>./mybatis-generator.xml</configurationFile>
+          </configuration>
+        </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
