导航功能实现，通过Redis缓存实现分类导航数据Category，Jedis连接池获取Redis缓存

--- a/TravelNetwork/pom.xml
+++ b/TravelNetwork/pom.xml
@@ -170,6 +170,12 @@
       <artifactId>standard</artifactId>
       <version>1.1.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
